examples/tests/semantic/fail/incompatibleArrayInitialization.tig
let 
    type wrong_array_type = array of int
    var wrong_array_creation := wrong_array_type [1] of "hello"
in 
end 